// Works with Gradle 5.7 and Java 12

// To run this do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

sourceCompatibility = 11
targetCompatibility = 11

version = '0.0.1'
group = 'ehu.isad'

// ext.moduleName = 'gradlejavafxhelloworld'
mainClassName = "$moduleName/ehu.isad.App"


javafx {
    version = "12"
    modules = [ ]
}


repositories {
    mavenCentral()
}

def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]

dependencies {
    implementation 'junit:junit:4.12'
    implementation 'com.google.code.gson:gson:2.8.6'
}

run {
    inputs.property('moduleName', moduleName)
    doFirst {
        jvmArgs = jvmArgs.plus(newArgs)
        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                                '--module', "$mainClassName",
        ])
        classpath = files()
    }
}

